# Pace-Calculator

./: .gitattributes  .gitignore  README.md  console_scripts.py  pyproject.toml
pace/: pace.1  pace.py  pace_formatter.py  pace_gui.py  pace_math.py
paces_calc/: __init__.py  pace.1  pace.py  pace_formatter.py  pace_gui.py
test/: test_pacemath.py
